--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,9 +8,9 @@
 <body>
 
   <body>
-    <h1>{{title}}</h1>
+    {{>header}}
     <img src="./img/me.JPG" />
-    <p>Created by {{name}}</p>
+    {{>footer}}
   </body>
 </body>
 
