--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,44 @@
 h1 {
-  color: grey;
+  font-size: 64px;
+  margin-bottom: 16px;
 }
 
-img {
+body {
+  color: #333333;
+  font-family: arial;
+  max-width: 650px;
+  margin: 0 auto;
+  padding: 0 16px;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+header {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+header a {
+  color: #888;
+  margin-right: 16px;
+  text-decoration: none;
+}
+
+footer {
+  color: #888888;
+  border-top: 1px solid #eee;
+  padding: 16px 0;
+  margin-top: 16px;
+}
+
+.main-content {
+  flex: 1;
+}
+
+.portrait {
   width: 250px;
 }
+
+/* I am not trying to add any additional space above or below. */
