--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,8 @@
   <body>
     <div class="main-content">
       {{>header}}
-      <img class="portrait" src="./img/me.JPG" />
+      <p>This site was created by Sayaka Ono. It uses data from mapbox.com and weatherstack!</p>
+      <img class="portrait" src="/img/me.JPG" />
     </div>
     {{>footer}}
   </body>
